<resources>
    <string name="app_name">Sanjeevani</string>

    <!--Login Screen-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="newUser" translatable="false">New User?</string>
    <string name="yetTobeVerified">Your profile is yet to be verified</string>

    <!--Register Screen-->
    <string name="Name">Name</string>
    <string name="register">Register</string>
    <string name="reqMail" translatable="false">Email is required</string>
    <string name="reqName" translatable="false">Name is required</string>
    <string name="reqSpl" translatable="false">Specialisation is required</string>
    <string name="reqID" translatable="false">Medical Registration Number is required</string>
    <string name="reqPass" translatable="false">Password must be atleast 8 characters long</string>
    <string name="medID">Medical Registration Number</string>
    <string name="specialisation">Specialisation</string>

    <!--Registration Popup-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="patOrDoc">Are you looking for medical consultation?</string>

    <!--PatientHome Activity-->
    <string name="IOTDeviceID" translatable="false">Sanjeevani Kit ID</string>
    <string name="realtimeStats" translatable="false">Your Realtime Health Statistics</string>
    <string name="temp" translatable="false">Temperature(F)</string>
    <string name="pulse" translatable="false">Pulse Rate(bpm)</string>
    <string name="bp" translatable="false">Blood Pressure(mmHg)</string>
    <string name="go" translatable="false">Go</string>

    <string name="googleMapKey" translatable="false">AIzaSyCSjdHrvFbUX3qTW4w4bjzeYRZZ0znlur8</string>

</resources>