<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PatientHomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:layout_height="250dp"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/healthmonitorgif"
            android:src="@drawable/register_doctor_gif"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:layout_gravity="center_horizontal"

            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"

                android:id="@+id/layPhone"
                android:clickable="true"
                android:layout_marginTop="30dp"
                android:textColorHint="#000">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:clickable="true"
                    android:backgroundTint="#ffff"
                    android:drawableStart="@drawable/health_monitoring"
                    android:hint="@string/IOTDeviceID"
                    android:drawablePadding="15dp"

                    android:ems="10"
                    android:id="@+id/kitID"
                    android:textColor="#000"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:id="@+id/btnGo"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layStats"
            android:layout_margin="20dp"
            android:background="@color/light_blue"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/realtimeStats"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:layout_marginTop="5dp"
                    android:text="@string/temp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:id="@+id/valTemp"
                    android:text="95.4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:layout_marginTop="5dp"
                    android:text="@string/bp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/valBp"
                    android:layout_marginTop="5dp"
                    android:text="95.4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:layout_marginTop="5dp"
                    android:text="@string/pulse"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/valPulse"
                    android:layout_marginTop="5dp"
                    android:text="95.4"/>

            </LinearLayout>

        </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginBottom="0dp">

        <include layout="@layout/layout_bottom_navigation_view"></include>

    </RelativeLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>